<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="no_entries">You have no books in your wishlist</string>
  <string name="isbn_hint">10 or 13 digit number</string>
  <string name="hello">Hello World, Wishlist!</string>
  <string name="app_name">Wishlist</string>
  <string name="add_text">Add by Typing</string>
  <string name="add_barcode">Add by Scan</string>
  <string name="add_scratch">Add from Scratch</string>

  <!-- Long Press context menu items -->
  <string name="edit_item">Edit</string>
  <string name="delete_item">Delete</string>
  <string name="update_item">Update Status</string>
  <string name="view_metadata">View at %1$s</string>

  <string name="status_label">Availability</string>
  <string name="title_label">Title</string>
  <string name="author_label">Author</string>
  <string name="isbn_label">ISBN (required)</string>
  <string name="duedate_label">Due Date</string>
  <string name="duedate_hint">YYYY/MM/DD</string>
  <string name="save_button">Save</string>
  <string name="discard_button">Discard</string>
  <string name="bad_scan">Sorry, I don\'t understand the result</string>
  <string name="filter">Filter</string>
  <string name="status_filter">Show the checked statuses</string>

  <!-- Confirm Item Delete Dialog -->
  <string name="del_title">Confirm Delete</string>
  <string name="del_message">Do you want to delete this item?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>

  <!-- Loading Lib XML File Dialog -->
  <string name="xml_refresh_title">Refreshing XML</string>
  <string name="xml_refresh_message">Loading most recent list of libraries</string>

  <!-- Preferences -->
  <string name="view_prefs">Preferences</string>
  <string name="pref_cat_lib">Library Preferences</string>
  <string name="pref_state_title">State</string>
  <string name="pref_lib_name">Library Name</string>
  <string name="pref_xml_file">Refresh Resource File</string>
  <string name="pref_xml_file_summary">Last updated %s</string>
  <string name="pref_cat_application">Application Preferences</string>
  <string name="pref_data_import_button">Data Import/Export</string>

  <string name="file_date_format">MM/dd/yyyy hh:mm aa</string>

  <!-- Preferences Display Values -->
  <string name="switch_lib_title">Are you sure?</string>
  <string name="switch_lib_message">Switching libraries will delete all existing availability information, would you
    like to continue?
  </string>

  <!-- Notifications -->
  <string name="note_title">A new book has become available</string>
  <!--%1 is the title
%2 is the author-->
  <string name="note_body">%1$s by %2$s</string>

  <!-- Status Toasts-->
  <!--%1 is the title
%2 is a status-->
  <string name="same_status">%1$s is still %2$s</string>
  <string name="new_status">%1$s is now %2$s</string>

  <!-- Data Import/Export -->
  <string name="import_category">Import</string>
  <string name="export_category">Export</string>
  <string name="import_select_file_button">Select a File</string>
  <string name="import_none_selected">&lt;None Selected&gt;</string>

</resources>
