<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
	a:layout_width="fill_parent"
	a:layout_height="fill_parent"
	a:orientation="vertical">
	<com.softwaresmithy.view.CategoryDivider
		a:layout_width="fill_parent"
		a:layout_height="wrap_content" 
		a:text="@string/import_category"/>
	<Button
		a:id="@+id/import_file_button"
		a:layout_width="fill_parent"
		a:layout_height="wrap_content" 
		a:text="@string/import_select_file_button"
		a:onClick="invokePickFile"/>
	<EditText
		a:id="@+id/import_file_text"
		a:layout_width="fill_parent"
		a:layout_height="wrap_content" 
		a:hint="@string/import_none_selected"
		a:enabled="false"/>
	<com.softwaresmithy.view.CategoryDivider
		a:layout_width="fill_parent"
		a:layout_height="wrap_content" 
		a:text="@string/export_category"/>	
</LinearLayout>