<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
	a:layout_width="fill_parent"
	a:layout_height="fill_parent"
	a:orientation="vertical">
	<ImageView
		a:id="@+id/cover"
		a:layout_width="fill_parent"
		a:layout_height="wrap_content"/>
	<TextView
		a:id="@+id/isbn_label"
		a:layout_width="wrap_content"
		a:layout_height="wrap_content"
		a:text="@string/isbn_label"/>
	<EditText
		a:id="@+id/isbn_text"
		a:layout_width="fill_parent"
		a:layout_height="wrap_content"/>		
	<TextView
		a:id="@+id/title_label"
		a:layout_width="wrap_content"
		a:layout_height="wrap_content"
		a:text="@string/title_label"/>
	<EditText
		a:id="@+id/title_text"
		a:layout_width="fill_parent"
		a:layout_height="wrap_content"/>
	<TextView
		a:id="@+id/author_label"
		a:layout_width="wrap_content"
		a:layout_height="wrap_content"
		a:text="@string/author_label"/>
	<EditText
		a:id="@+id/author_text"
		a:layout_width="fill_parent"
		a:layout_height="wrap_content"/>
	<TextView
		a:id="@+id/duedate_label"
		a:layout_width="wrap_content"
		a:layout_height="wrap_content"
		a:text="@string/duedate_label"/>
	<EditText
		a:id="@+id/duedate_text"
		a:hint="@string/duedate_hint"
		a:inputType="date"
		a:layout_width="fill_parent"
		a:layout_height="wrap_content"/>						
</LinearLayout>